--- a/style.css
+++ b/style.css
@@ -7,18 +7,15 @@
 body {
   font-family: Arial, sans-serif;
   background: #fff;
-  color: #000;
+  color: #181818;
   padding: 20px;
   transition: background 0.7s, color 0.7s;
-  
 }
 
 body.darkmode {
-  background: #181818;
+  background: #000000;
   color: #fff;
 }
-
-
 
 body.darkmode h1 {
   color: #fff;
@@ -39,31 +36,39 @@ header {
 h1 {
   font-size: 32px;
   font-weight: 900;
-  transition: background 0.4s, color 0.4s;
-}
-
-nav a {
-  margin-left: 20px;
-  text-decoration: none;
-  color: #000;
-  font-weight: bold;
-  font-size: 14px;
-  transition: background 0.4s, color 0.4s;
-}
-
-nav a svg {
-  transition: transform 0.3s;
-}
-
-nav a:hover svg {
-  transform: scale(1.3);
+  transition: background 1.4s, color 1.4s;
 }
 
 nav {
   display: flex;
   align-items: center;
-
+  gap: 6px;
   transition: background 0.4s, color 0.4s;
+}
+
+nav a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
+  text-decoration: none;
+  color: #1a1818;
+  font-weight: bold;
+  font-size: 14px;
+  transition: background 0.4s, color 0.4s;
+  margin: 0;
+  cursor: pointer;
+}
+
+nav a svg {
+  width: 25px;
+  height: 25px;
+  transition: transform 0.3s;
+}
+
+nav a:hover svg {
+  transform: scale(1.3);
 }
 
 .gallery {
@@ -82,7 +87,7 @@ nav {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  pointer-events: auto; 
+  pointer-events: auto;
 }
 
 .gallery img:hover {
@@ -97,7 +102,7 @@ nav {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0, 0, 0, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -120,7 +125,6 @@ nav {
   transition: transform 0.3s;
 }
 
-
 .gallery .fullscreen-overlay {
   display: none;
   position: fixed;
@@ -128,7 +132,7 @@ nav {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0, 0, 0, 0.8);
   align-items: center;
   justify-content: center;
   z-index: 2000;
@@ -136,12 +140,10 @@ nav {
   opacity: 0;
 }
 
-
 .gallery img:hover + .fullscreen-overlay {
   display: flex;
   opacity: 1;
 }
-
 
 .gallery .fullscreen-overlay img {
   max-width: 90vw;
@@ -158,3 +160,20 @@ nav {
   height: 40px;
   width: 40px;
 }
+
+.nav-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  color: #ffffff;
+  border: none;
+  font-size: 2rem;
+  padding: 0.5em 0.8em;
+  cursor: pointer;
+  z-index: 1010;
+}
+
+
+#prevImg { left: 40px; }
+#nextImg { right: 40px; }
