--- a/style.css
+++ b/style.css
@@ -6,23 +6,23 @@
 
 body {
   font-family: Arial, sans-serif;
-  background: #fff;
-  color: #181818;
+  background: #000000;
+  color: #ffffff;
   padding: 20px;
   transition: background 0.7s, color 0.7s;
 }
 
 body.darkmode {
-  background: #000000;
-  color: #fff;
+  background: #fff;
+  color: #000000;
 }
 
 body.darkmode h1 {
-  color: #fff;
+  color: #000000;
 }
 
 body.darkmode nav a {
-  color: #fff;
+  color: #000000;
 }
 
 header {
@@ -53,7 +53,7 @@ nav a {
   height: 40px;
   width: 40px;
   text-decoration: none;
-  color: #1a1818;
+  color: #fff;
   font-weight: bold;
   font-size: 14px;
   transition: background 0.4s, color 0.4s;
